[fix]#4647 recorder tools overflow

--- a/css/_modules.scss
+++ b/css/_modules.scss
@@ -4096,6 +4096,10 @@ slider, slider.drawing-zone{
 }
 
 recorder{
+	.view{
+		overflow: hidden;
+		height: auto;
+	}
 	.status{
 		color: $accent;
 	}
